service to trigger test

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,3 +5,10 @@ akka {
 spray.can.server {
   request-timeout = 1s
 }
+
+myapp {
+  rabbitmq {
+    host = rabbitmq-qa-2.laddersoffice.net
+    queue = jobseeker-wednesday-newsletter-email.build
+  }
+}
