copy modified files to topology

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -11,4 +11,8 @@ myapp {
     host = rabbitmq-qa-2.laddersoffice.net
     queue = jobseeker-wednesday-newsletter-email.build
   }
+
+  topology {
+    root = /Users/kzhao/theladders/email/storm-jobseeker-wednesday-newsletter-email-builder
+  }
 }
